# Rust-Portfolio

./: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
.github/workflows/: pr_check.yml
src/: app.rs  main.rs
src/pages/projects/: projectIndex.rs  projectInfoStructs.rs
templates/: cookies.html.tera  index.html.tera  template.html.tera
templates/css/: style.css
templates/projects/: kitty.html.tera
