[package]
name = "rust-portfolio"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
diesel = { version = "2.1.4", features = ["postgres"]}
dotenvy = "0.15.7"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
